--- a/DemoCVReader/DemoCVReader/Views/Shared/_LayoutPage.cshtml
+++ b/DemoCVReader/DemoCVReader/Views/Shared/_LayoutPage.cshtml
@@ -92,7 +92,8 @@
 </html>
 
 <!--   Core JS Files   -->
-<script src="~/assets/js/core/jquery.min.js" type="text/javascript"></script>
+@*<script src="~/assets/js/core/jquery.min.js" type="text/javascript"></script>*@
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <script src="~/assets/js/core/popper.min.js" type="text/javascript"></script>
 <script src="~/assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
 <script src="~/assets/js/plugins/moment.min.js"></script>
